Renamed .gallery to .showcase to avoid conflicts; Styling and showcase layout updates

--- a/wp-content/themes/fipradotcom/sass/elements/_buttons.scss
+++ b/wp-content/themes/fipradotcom/sass/elements/_buttons.scss
@@ -12,6 +12,7 @@
   margin-bottom: $v-rhythm * 0.5;
   margin-right: em(16px);
   &:last-child { margin-right: 0; }
+  &.no-margin { margin:0; }
 
   &.primary {
     background-color: $color__fipra-blue;
