--- a/wp-content/themes/fipradotcom/sass/modules/_modules.scss
+++ b/wp-content/themes/fipradotcom/sass/modules/_modules.scss
@@ -16,6 +16,7 @@
 }
 
 .highlight-box {
+  font-family: $font__sans;
   &.primary {
     background-color: $color__fipra-blue-gray;
     padding:$v-rhythm em(16px);
@@ -24,7 +25,7 @@
       color:lighten($color__fipra-turquoise, 5%);
       font-weight:$font__black;
       &:hover {
-//        color:$color__fipra-turquoise;
+        color:$color__fipra-blue-gray;
       }
     }
   }
@@ -37,7 +38,7 @@
       color:$color__fipra-turquoise;
       font-weight:$font__black;
       &:hover {
-//        color:$color__fipra-turquoise;
+        color:$color__fipra-blue-gray;
       }
     }
   }
@@ -113,7 +114,8 @@
 
 //Gallery box with outline style
 .outline .circle-icon {
-  background-color: $color__fipra-blue-gray;
+  background-color: $color__fipra-blue;
+  @include background(radial-gradient(to bottom, $color__fipra-blue 60%, darken($color__fipra-blue, 15%) 80%));
   color:white;
 }
 
@@ -122,3 +124,5 @@
 .blue-gray {
   color:$color__fipra-blue-gray;
 }
+
+#modal { display:none;}
