--- a/wp-content/themes/fipradotcom/sass/layout/_header.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_header.scss
@@ -96,6 +96,7 @@
   font-family: $font__sans;
   input[type=text] {
     padding-right:40px;
+    width:150px;
     font-family: $font__sans;
   }
   .button-search {
