--- a/wp-content/themes/fipradotcom/sass/navigation/_menus.scss
+++ b/wp-content/themes/fipradotcom/sass/navigation/_menus.scss
@@ -122,7 +122,7 @@
 } // End of #primary-menu-mobile-container
 
 @include media($media__medium) {
-  .mobile-menu-toggle, .mobile-menu-search { display: none; }
+  .mobile-menu-toggle, .mobile-menu-search, .mobile-menu-global-network { display: none; }
 }
 
 .comment-navigation,
