--- a/wp-content/themes/fipradotcom/style.css
+++ b/wp-content/themes/fipradotcom/style.css
@@ -663,6 +663,7 @@ table {
   font-family: 'Lato', Arial, Helvetica, sans-serif; }
   .searchform input[type=text] {
     padding-right: 40px;
+    width: 150px;
     font-family: 'Lato', Arial, Helvetica, sans-serif; }
   .searchform .button-search {
     background: none;
@@ -1461,7 +1462,10 @@ table {
       position: absolute;
       display: none;
       z-index: 99;
-      background-color: #5F697F; }
+      background-color: #5F697F;
+      background: -webkit-linear-gradient(#5F697F 60%, #586276 100%);
+      background: -webkit-linear-gradient(to, #586276 100%);
+      background: linear-gradient(to   , #586276 100%); }
       #global-network-menu-container #global-network-menu .menuzord-menu > li > .megamenu .country-tag {
         float: left;
         width: 18.4%;
@@ -1715,6 +1719,55 @@ table {
           width: 100%; }
         #global-network-menu-container #global-network-menu .menuzord-responsive .menuzord-tabs-content {
           width: 100%; } }
+
+#mobile-header-global-network-container {
+  clear: both;
+  background-color: #c7c5bf;
+  background: -webkit-linear-gradient(#d3d1cd 40%, #c7c5bf 100%);
+  background: -webkit-linear-gradient(to, #c7c5bf 100%);
+  background: linear-gradient(to   , #c7c5bf 100%); }
+  @media screen and (min-width: 769px) {
+    #mobile-header-global-network-container {
+      display: none; } }
+  #mobile-header-global-network-container #mobile-header-global-network {
+    display: none;
+    text-align: center;
+    font-family: 'Lato', Arial, Helvetica, sans-serif;
+    padding: 1.5rem 40px; }
+    @media screen and (min-width: 1200px) {
+      #mobile-header-global-network-container #mobile-header-global-network {
+        padding: 1.5rem 0; } }
+    #mobile-header-global-network-container #mobile-header-global-network .title {
+      font-size: 18px;
+      font-size: 1.125rem;
+      font-weight: 900;
+      display: block;
+      margin-bottom: 0.75rem; }
+    #mobile-header-global-network-container #mobile-header-global-network select {
+      font-family: 'Lato', Arial, Helvetica, sans-serif;
+      text-align: left;
+      padding: 0.375rem 0.625em;
+      width: 80%;
+      border: 0;
+      background-color: #EBEAE8;
+      background: -webkit-linear-gradient(#dfdeda 0%, #f7f6f6 20%);
+      background: -webkit-linear-gradient(to, #f7f6f6 20%);
+      background: linear-gradient(to   , #f7f6f6 20%);
+      border-top: 1px solid #c7c5bf;
+      border-bottom: 1px solid white;
+      background-color: #EBEAE8;
+      border-bottom-left-radius: 4px;
+      border-top-left-radius: 4px;
+      border-bottom-right-radius: 4px;
+      border-top-right-radius: 4px; }
+      #mobile-header-global-network-container #mobile-header-global-network select optgroup {
+        background-color: #d3d1cd; }
+      @media screen and (min-width: 769px) {
+        #mobile-header-global-network-container #mobile-header-global-network select {
+          padding: 0.375rem 1.25em;
+          font-size: 18px;
+          font-size: 1.125rem;
+          width: 500px; } }
 
 #content-container {
   width: 100%;
@@ -1970,7 +2023,7 @@ a {
           background-color: #e4e7f1; }
 
 @media screen and (min-width: 769px) {
-  .mobile-menu-toggle, .mobile-menu-search {
+  .mobile-menu-toggle, .mobile-menu-search, .mobile-menu-global-network {
     display: none; } }
 
 .site-main .comment-navigation, .site-main .posts-navigation, .site-main .post-navigation {
