--- a/wp-content/themes/fipradotcom/sass/navigation/_menus.scss
+++ b/wp-content/themes/fipradotcom/sass/navigation/_menus.scss
@@ -145,3 +145,39 @@
     width: 50%;
   }
 }
+
+ul.anchor-links-list {
+  @include clearfix;
+  @include font-size(14);
+  font-family: $font__sans;
+  font-weight: $font__bold;
+  list-style: none;
+  margin-bottom:$v-rhythm * 2;
+  &.no-margin { margin:0; }
+  li {
+    position:relative;
+
+    @include media(max-width $media__medium) {
+      display:none;
+      padding: $v-rhythm / 2 em(12px);
+      background-color: lighten($color__fipra-periwinkle, 10%);
+      border-bottom:1px solid white;
+      &.menu-title { display:block; background-color:$color__fipra-blue; color:white; cursor:pointer; }
+      a { display:block; }
+      i { position:absolute; right:em(12px); top:$v-rhythm / 2; }
+
+    }
+
+    @include media($media__medium) {
+      float: left;
+      &.menu-title i { display:none; }
+      &:not(:first-child) { margin-left: em(12px); }
+      a {
+        padding:$v-rhythm / 2 em(6px);
+        @include border-top-radius(6px);
+        @include border-bottom-radius(6px);
+        &:hover { background-color: lighten($color__fipra-periwinkle, 5%); }
+      }
+    }
+  }
+}
