--- a/wp-content/themes/fipradotcom/sass/layout/_layout.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_layout.scss
@@ -23,21 +23,19 @@
     @include row();
     @include outer-container($local-max-width: $container__outer-width);
     background-color: white;
+    padding-bottom:$v-rhythm * 2;
     @include media($media__xlarge) {
       @include border-left-radius(4px);
       @include border-right-radius(4px);
       border:1px solid darken($color__fipra-light-gray, 5%);
     }
+
   }
 
   #primary {
     @include span-columns(12);
-    @include media($media__medium) {
-      @include span-columns(8);
-    }
-    &.full-width {
-      @include span-columns(12);
-    }
+    @include media($media__medium) { @include span-columns(8); }
+    &.full-width { @include span-columns(12); }
   }
 
   #secondary {
@@ -45,9 +43,9 @@
     @include media($media__medium) { @include span-columns(4); }
   }
 
-  #primary, #secondary {
-    padding:($v-rhythm * 3) 20px;
-    @include media($media__medium) { padding:($v-rhythm * 3) 40px; }
+  .content-area {
+    padding:$v-rhythm * 2 em(20px) 0;
+    @include media($media__medium) { padding:$v-rhythm * 2 em(40px) 0; }
     margin:0;
 
   }
