--- a/wp-content/themes/fipradotcom/sass/pages/_unit.scss
+++ b/wp-content/themes/fipradotcom/sass/pages/_unit.scss
@@ -1,12 +1,17 @@
 #page-banner-content {
   &.unit {
     text-align: center;
-    h1 { @include font-size(36); letter-spacing: -1px; }
+    h1 { @include font-size(30); }
     .meta { font-style: italic; margin-bottom:$v-rhythm; }
     img {
-      display: inline-block;
+      display: none;
       width: 70px;
       margin-bottom: $v-rhythm;
+    }
+
+    @include media($media__small) {
+      h1 { @include font-size(36); letter-spacing: -1px; }
+      img { display:inline-block; }
     }
 
     @include media($media__medium) {
@@ -14,7 +19,7 @@
       h1 { @include font-size(56); }
     }
 
-    @include media($media__large) { padding:$v-rhythm * 16 em(40px) $v-rhythm * 4 !important; }
+    @include media($media__large) { padding:$v-rhythm * 18 em(40px) $v-rhythm * 2 !important; }
 
     &.dark-text {
       h1 { color: $color__fipra-blue !important; text-shadow:0px 1px 1px $color__fipra-light-gray !important; }
@@ -36,5 +41,14 @@
       }
     }
 
+  }
+}
+
+.page-nav {
+  padding:$v-rhythm em(20px);
+  @include media($media__medium) {
+    padding:$v-rhythm em(40px);
+    background-color: lighten($color__fipra-periwinkle, 10%);
+    border-bottom:1px solid darken(white, 10%);
   }
 }
