--- a/wp-content/themes/fipradotcom/style.css
+++ b/wp-content/themes/fipradotcom/style.css
@@ -283,7 +283,8 @@ h4 {
   font-weight: 700;
   font-size: 18px;
   font-size: 1.125rem;
-  line-height: 1.5rem; }
+  line-height: 1.5rem;
+  color: #00257f; }
   @media screen and (min-width: 769px) {
     h4 {
       font-size: 21px;
@@ -304,8 +305,6 @@ h6 {
 p {
   margin-top: 0;
   margin-bottom: 1.5rem; }
-  p:last-child {
-    margin-bottom: 0; }
 
 dfn, cite, em, i {
   font-style: italic; }
@@ -315,7 +314,7 @@ cite {
   font-weight: 700; }
 
 blockquote {
-  margin: 0;
+  margin: 0 0 1.5rem 0;
   font-size: 28px;
   font-size: 1.75rem;
   line-height: 2.25rem;
@@ -1313,8 +1312,6 @@ table {
 #page-banner {
   font-family: 'Lato', Arial, Helvetica, sans-serif;
   color: white;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: auto 650px; }
@@ -1324,12 +1321,16 @@ table {
     display: table; }
   @media screen and (min-width: 769px) {
     #page-banner {
+      border-top-left-radius: 4px;
+      border-top-right-radius: 4px; } }
+  @media screen and (min-width: 769px) {
+    #page-banner {
       background-position: center;
       background-repeat: no-repeat;
       background-size: 100% auto; } }
   #page-banner #page-banner-content {
     display: block;
-    padding: 3rem 2.5em; }
+    padding: 1.5rem 2.5em; }
     #page-banner #page-banner-content::after {
       clear: both;
       content: "";
@@ -1882,7 +1883,8 @@ table {
     max-width: 1100px;
     margin-left: auto;
     margin-right: auto;
-    background-color: white; }
+    background-color: white;
+    padding-bottom: 1.5rem; }
     #content-container #content::after {
       clear: both;
       content: "";
@@ -1935,12 +1937,12 @@ table {
         width: 31.76157%; }
         #content-container #secondary:last-child {
           margin-right: 0; } }
-  #content-container #primary, #content-container #secondary {
-    padding: 2.25rem 20px;
+  #content-container .content-area {
+    padding: 1.5rem 1.25em 0;
     margin: 0; }
     @media screen and (min-width: 769px) {
-      #content-container #primary, #content-container #secondary {
-        padding: 2.25rem 40px; } }
+      #content-container .content-area {
+        padding: 1.5rem 2.5em 0; } }
 
 .row {
   display: block; }
@@ -2749,6 +2751,54 @@ a {
   text-align: right;
   width: 50%; }
 
+ul.anchor-links-list {
+  font-size: 14px;
+  font-size: 0.875rem;
+  font-family: 'Lato', Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  list-style: none;
+  margin-bottom: 1.5rem; }
+  ul.anchor-links-list::after {
+    clear: both;
+    content: "";
+    display: table; }
+  ul.anchor-links-list.no-margin {
+    margin: 0; }
+  ul.anchor-links-list li {
+    position: relative; }
+    @media screen and (max-width: 769px)  {
+      ul.anchor-links-list li {
+        display: none;
+        padding: 0.375rem 0.75em;
+        background-color: #eef0f6;
+        border-bottom: 1px solid white; }
+        ul.anchor-links-list li.menu-title {
+          display: block;
+          background-color: #00257f;
+          color: white;
+          cursor: pointer; }
+        ul.anchor-links-list li a {
+          display: block; }
+        ul.anchor-links-list li i {
+          position: absolute;
+          right: 0.75em;
+          top: 0.375rem; } }
+    @media screen and (min-width: 769px) {
+      ul.anchor-links-list li {
+        float: left; }
+        ul.anchor-links-list li.menu-title i {
+          display: none; }
+        ul.anchor-links-list li:not(:first-child) {
+          margin-left: 0.75em; }
+        ul.anchor-links-list li a {
+          padding: 0.375rem 0.375em;
+          border-top-left-radius: 6px;
+          border-top-right-radius: 6px;
+          border-bottom-left-radius: 6px;
+          border-bottom-right-radius: 6px; }
+          ul.anchor-links-list li a:hover {
+            background-color: #dde2ee; } }
+
 /*--------------------------------------------------------------
 # Accessibility
 --------------------------------------------------------------*/
@@ -2948,42 +2998,6 @@ a {
 #modal {
   display: none; }
 
-ul.anchor-links-list {
-  font-family: 'Lato', Arial, Helvetica, sans-serif;
-  list-style: none;
-  margin-bottom: 1.5rem; }
-  ul.anchor-links-list::after {
-    clear: both;
-    content: "";
-    display: table; }
-  ul.anchor-links-list li {
-    position: relative; }
-    @media screen and (max-width: 769px)  {
-      ul.anchor-links-list li {
-        display: none;
-        font-weight: 700;
-        padding: 0.375rem 0.75em;
-        background-color: #eef0f6;
-        border-bottom: 1px solid white; }
-        ul.anchor-links-list li.menu-title {
-          display: block;
-          background-color: #00257f;
-          color: white;
-          cursor: pointer; }
-        ul.anchor-links-list li a {
-          display: block; }
-        ul.anchor-links-list li i {
-          position: absolute;
-          right: 0.75em;
-          top: 0.375rem; } }
-    @media screen and (min-width: 769px) {
-      ul.anchor-links-list li {
-        float: left; }
-        ul.anchor-links-list li.menu-title i {
-          display: none; }
-        ul.anchor-links-list li:not(:first-child) {
-          margin-left: 1.125em; } }
-
 /*--------------------------------------------------------------
 # Widgets
 --------------------------------------------------------------*/
@@ -3120,16 +3134,22 @@ embed, iframe, object {
 #page-banner-content.unit {
   text-align: center; }
   #page-banner-content.unit h1 {
-    font-size: 36px;
-    font-size: 2.25rem;
-    letter-spacing: -1px; }
+    font-size: 30px;
+    font-size: 1.875rem; }
   #page-banner-content.unit .meta {
     font-style: italic;
     margin-bottom: 0.75rem; }
   #page-banner-content.unit img {
-    display: inline-block;
+    display: none;
     width: 70px;
     margin-bottom: 0.75rem; }
+  @media screen and (min-width: 481px) {
+    #page-banner-content.unit h1 {
+      font-size: 36px;
+      font-size: 2.25rem;
+      letter-spacing: -1px; }
+    #page-banner-content.unit img {
+      display: inline-block; } }
   @media screen and (min-width: 769px) {
     #page-banner-content.unit {
       text-align: left; }
@@ -3138,7 +3158,7 @@ embed, iframe, object {
         font-size: 3.5rem; } }
   @media screen and (min-width: 940px) {
     #page-banner-content.unit {
-      padding: 12rem 2.5em 3rem !important; } }
+      padding: 13.5rem 2.5em 1.5rem !important; } }
   #page-banner-content.unit.dark-text h1 {
     color: #00257f !important;
     text-shadow: 0px 1px 1px #EBEAE8 !important; }
@@ -3156,3 +3176,11 @@ embed, iframe, object {
     #page-banner-content.unit.dark-text .btn.secondary:hover {
       border: 1px solid #5F697F;
       color: #5F697F; }
+
+.page-nav {
+  padding: 0.75rem 1.25em; }
+  @media screen and (min-width: 769px) {
+    .page-nav {
+      padding: 0.75rem 2.5em;
+      background-color: #eef0f6;
+      border-bottom: 1px solid #e6e6e6; } }
