--- a/wp-content/themes/fipradotcom/style.css
+++ b/wp-content/themes/fipradotcom/style.css
@@ -2769,16 +2769,20 @@ ul.anchor-links-list {
     @media screen and (max-width: 769px)  {
       ul.anchor-links-list li {
         display: none;
-        padding: 0.375rem 0.75em;
         background-color: #eef0f6;
         border-bottom: 1px solid white; }
         ul.anchor-links-list li.menu-title {
           display: block;
           background-color: #00257f;
           color: white;
-          cursor: pointer; }
+          cursor: pointer;
+          padding: 0.375rem 0.75em; }
         ul.anchor-links-list li a {
-          display: block; }
+          display: block;
+          padding: 0.375rem 0.75em; }
+          ul.anchor-links-list li a:hover {
+            background-color: #14b1cc;
+            color: white; }
         ul.anchor-links-list li i {
           position: absolute;
           right: 0.75em;
@@ -2797,7 +2801,8 @@ ul.anchor-links-list {
           border-bottom-left-radius: 6px;
           border-bottom-right-radius: 6px; }
           ul.anchor-links-list li a:hover {
-            background-color: #dde2ee; } }
+            background-color: #14b1cc;
+            color: white; } }
 
 /*--------------------------------------------------------------
 # Accessibility
