--- a/wp-content/themes/fipradotcom/sass/typography/_copy.scss
+++ b/wp-content/themes/fipradotcom/sass/typography/_copy.scss
@@ -2,6 +2,7 @@ p {
   margin-top:0;
   margin-bottom: $v-rhythm * 2;
   &.no-margin { margin:0; }
+  &.no-bottom-margin { margin-bottom:0; }
 }
 
 dfn, cite, em, i {
